fix auth card on log in screen to fit all content- no overflow

--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -98,7 +98,7 @@ html {
     padding: 20px;
     margin: 10px 20px 10px 20px;
     width: min-content;
-    height: 400px;
+    height: 450px;
     background-color: var(--judgement-gray);   
 }
 
